syntax = "proto3";

import "const.proto";

package engine;

service RoutingInboundCallApi {
    // POST /routing/inbound_call
    rpc Create(RoutingInboundCall) returns (RoutingInboundCall) {}
    // GET /routing/inbound_call
    rpc List(ListRequest) returns (ListRoutingInboundCall) {}
    // GET /routing/inbound_call/:ID
    rpc Get(ItemRequest) returns (RoutingInboundCall) {}
    // PUT /routing/inbound_call/:ID
    rpc Update(RoutingInboundCall) returns (RoutingInboundCall) {}
    // DELETE /routing/inbound_call/:ID
    rpc Remove(ItemRequest) returns (RoutingInboundCall) {}
}

message RoutingInboundCall {
    int64 id = 1;
    int64 domain_id = 2;
    int64 created_at = 3;
    Lookup created_by = 4;
    int64 updated_at = 5;
    Lookup updated_by = 6;
    string name = 7;
    string description = 8;
    Lookup start_scheme = 9;
    Lookup stop_scheme = 10;
    repeated string numbers = 11;
    string host = 12;
    Lookup timezone = 13;
    bool debug = 14;
    bool disabled = 15;
}

message ListRoutingInboundCall {
    repeated RoutingInboundCall items = 1;
}